--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -42,6 +42,7 @@ file.reference.httpcore-4.2.2.jar=lib/httpcore-4.2.2.jar
 file.reference.je-4.0.92.jar=lib/je-4.0.92.jar
 file.reference.jsoup-1.8.1.jar=lib/jsoup-1.8.1.jar
 file.reference.log4j-1.2.14.jar=lib/log4j-1.2.14.jar
+file.reference.lucene-core-4.9.1.jar=lib\\lucene-core-4.9.1.jar
 file.reference.metadata-extractor-2.4.0-beta-1.jar=lib/metadata-extractor-2.4.0-beta-1.jar
 file.reference.tagsoup-1.2.1.jar=lib/tagsoup-1.2.1.jar
 file.reference.tika-core-1.0.jar=lib/tika-core-1.0.jar
@@ -67,7 +68,8 @@ javac.classpath=\
     ${file.reference.metadata-extractor-2.4.0-beta-1.jar}:\
     ${file.reference.tagsoup-1.2.1.jar}:\
     ${file.reference.tika-core-1.0.jar}:\
-    ${file.reference.tika-parsers-1.0.jar}
+    ${file.reference.tika-parsers-1.0.jar}:\
+    ${file.reference.lucene-core-4.9.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
