--- a/build.xml
+++ b/build.xml
@@ -10,6 +10,32 @@
 <project name="konektor-web-banky" default="default" basedir=".">
     <description>Builds, tests, and runs the project konektor-web-banky.</description>
     <import file="nbproject/build-impl.xml"/>
+		
+		<target name="-post-jar">
+
+			<property name="store.jar.name" value="konektor-web-banky"/>
+
+			<property name="store.dir" value="dist"/>
+			<property name="store.jar" value="${store.dir}/${store.jar.name}.jar"/>
+
+			<echo message="Packaging ${application.title} into a single JAR at ${store.jar}"/>
+
+			<jar destfile="${store.dir}/temp_final.jar" filesetmanifest="skip">
+					<zipgroupfileset dir="dist" includes="*.jar"/>
+					<zipgroupfileset dir="dist/lib" includes="*.jar"/>
+
+					<manifest>
+							<attribute name="Main-Class" value="${main.class}"/>
+					</manifest>
+			</jar>
+
+			<zip destfile="${store.jar}">
+					<zipfileset src="${store.dir}/temp_final.jar"
+					excludes="META-INF/*.SF, META-INF/*.DSA, META-INF/*.RSA"/>
+			</zip>
+
+		</target>
+		
     <!--
 
     There exist several targets which are by default empty and which can be 
@@ -51,8 +77,7 @@
       -init-macrodef-junit:     defines macro for junit execution
       -init-macrodef-debug:     defines macro for class debugging
       -init-macrodef-java:      defines macro for class execution
-      -do-jar-with-manifest:    JAR building (if you are using a manifest)
-      -do-jar-without-manifest: JAR building (if you are not using a manifest)
+      -do-jar:                  JAR building
       run:                      execution of project 
       -javadoc-build:           Javadoc generation
       test-report:              JUnit report generation
