--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -5,6 +5,7 @@ annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
 application.title=konektor-web-banky
 application.vendor=Petr
+auxiliary.org-netbeans-spi-editor-hints-projects.perProjectHintSettingsFile=nbproject/cfg_hints.xml
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -27,28 +28,51 @@ dist.jar=${dist.dir}/konektor-web-banky.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.antlr-runtime-3.5.jar=lib/ES-144/antlr-runtime-3.5.jar
 file.reference.apache-mime4j-core-0.7.jar=lib/apache-mime4j-core-0.7.jar
 file.reference.apache-mime4j-dom-0.7.jar=lib/apache-mime4j-dom-0.7.jar
 file.reference.asm-3.1.jar=lib/asm-3.1.jar
+file.reference.asm-4.1.jar=lib/ES-144/asm-4.1.jar
+file.reference.asm-commons-4.1.jar=lib/ES-144/asm-commons-4.1.jar
 file.reference.boilerpipe-1.1.0.jar=lib/boilerpipe-1.1.0.jar
 file.reference.commons-codec-1.6.jar=lib/commons-codec-1.6.jar
 file.reference.commons-compress-1.3.jar=lib/commons-compress-1.3.jar
 file.reference.commons-logging-1.1.1.jar=lib/commons-logging-1.1.1.jar
 file.reference.crawler4j-3.5.jar=lib/crawler4j-3.5.jar
-file.reference.elasticsearch-1.3.5.jar=lib/elasticsearch-1.3.5.jar
+file.reference.elasticsearch-1.4.4.jar=lib/ES-144/elasticsearch-1.4.4.jar
 file.reference.geronimo-stax-api_1.0_spec-1.0.1.jar=lib/geronimo-stax-api_1.0_spec-1.0.1.jar
+file.reference.groovy-all-2.3.2.jar=lib/ES-144/groovy-all-2.3.2.jar
 file.reference.httpclient-4.2.3.jar=lib/httpclient-4.2.3.jar
 file.reference.httpcore-4.2.2.jar=lib/httpcore-4.2.2.jar
 file.reference.je-4.0.92.jar=lib/je-4.0.92.jar
+file.reference.jna-4.1.0.jar=lib/ES-144/jna-4.1.0.jar
 file.reference.jsoup-1.8.1.jar=lib/jsoup-1.8.1.jar
+file.reference.jts-1.13.jar=lib/ES-144/jts-1.13.jar
 file.reference.log4j-1.2.14.jar=lib/log4j-1.2.14.jar
-file.reference.lucene-core-4.9.1.jar=lib\\lucene-core-4.9.1.jar
+file.reference.log4j-1.2.17.jar=lib/ES-144/log4j-1.2.17.jar
+file.reference.lucene-analyzers-common-4.10.3.jar=lib/ES-144/lucene-analyzers-common-4.10.3.jar
+file.reference.lucene-core-4.10.3.jar=lib/ES-144/lucene-core-4.10.3.jar
+file.reference.lucene-expressions-4.10.3.jar=lib/ES-144/lucene-expressions-4.10.3.jar
+file.reference.lucene-grouping-4.10.3.jar=lib/ES-144/lucene-grouping-4.10.3.jar
+file.reference.lucene-highlighter-4.10.3.jar=lib/ES-144/lucene-highlighter-4.10.3.jar
+file.reference.lucene-join-4.10.3.jar=lib/ES-144/lucene-join-4.10.3.jar
+file.reference.lucene-memory-4.10.3.jar=lib/ES-144/lucene-memory-4.10.3.jar
+file.reference.lucene-misc-4.10.3.jar=lib/ES-144/lucene-misc-4.10.3.jar
+file.reference.lucene-queries-4.10.3.jar=lib/ES-144/lucene-queries-4.10.3.jar
+file.reference.lucene-queryparser-4.10.3.jar=lib/ES-144/lucene-queryparser-4.10.3.jar
+file.reference.lucene-sandbox-4.10.3.jar=lib/ES-144/lucene-sandbox-4.10.3.jar
+file.reference.lucene-spatial-4.10.3.jar=lib/ES-144/lucene-spatial-4.10.3.jar
+file.reference.lucene-suggest-4.10.3.jar=lib/ES-144/lucene-suggest-4.10.3.jar
 file.reference.metadata-extractor-2.4.0-beta-1.jar=lib/metadata-extractor-2.4.0-beta-1.jar
+file.reference.sigar-1.6.4.jar=lib/ES-144/sigar/sigar-1.6.4.jar
+file.reference.spatial4j-0.4.1.jar=lib/ES-144/spatial4j-0.4.1.jar
 file.reference.tagsoup-1.2.1.jar=lib/tagsoup-1.2.1.jar
 file.reference.tika-core-1.0.jar=lib/tika-core-1.0.jar
 file.reference.tika-parsers-1.0.jar=lib/tika-parsers-1.0.jar
 includes=**
+jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
+jar.index=${jnlp.enabled}
 javac.classpath=\
     ${file.reference.apache-mime4j-core-0.7.jar}:\
     ${file.reference.apache-mime4j-dom-0.7.jar}:\
@@ -58,7 +82,6 @@ javac.classpath=\
     ${file.reference.commons-compress-1.3.jar}:\
     ${file.reference.commons-logging-1.1.1.jar}:\
     ${file.reference.crawler4j-3.5.jar}:\
-    ${file.reference.elasticsearch-1.3.5.jar}:\
     ${file.reference.geronimo-stax-api_1.0_spec-1.0.1.jar}:\
     ${file.reference.httpclient-4.2.3.jar}:\
     ${file.reference.httpcore-4.2.2.jar}:\
@@ -69,7 +92,29 @@ javac.classpath=\
     ${file.reference.tagsoup-1.2.1.jar}:\
     ${file.reference.tika-core-1.0.jar}:\
     ${file.reference.tika-parsers-1.0.jar}:\
-    ${file.reference.lucene-core-4.9.1.jar}
+    ${file.reference.antlr-runtime-3.5.jar}:\
+    ${file.reference.asm-4.1.jar}:\
+    ${file.reference.asm-commons-4.1.jar}:\
+    ${file.reference.elasticsearch-1.4.4.jar}:\
+    ${file.reference.groovy-all-2.3.2.jar}:\
+    ${file.reference.jna-4.1.0.jar}:\
+    ${file.reference.jts-1.13.jar}:\
+    ${file.reference.log4j-1.2.17.jar}:\
+    ${file.reference.lucene-analyzers-common-4.10.3.jar}:\
+    ${file.reference.lucene-core-4.10.3.jar}:\
+    ${file.reference.lucene-expressions-4.10.3.jar}:\
+    ${file.reference.lucene-grouping-4.10.3.jar}:\
+    ${file.reference.lucene-highlighter-4.10.3.jar}:\
+    ${file.reference.lucene-join-4.10.3.jar}:\
+    ${file.reference.lucene-memory-4.10.3.jar}:\
+    ${file.reference.lucene-misc-4.10.3.jar}:\
+    ${file.reference.lucene-queries-4.10.3.jar}:\
+    ${file.reference.lucene-queryparser-4.10.3.jar}:\
+    ${file.reference.lucene-sandbox-4.10.3.jar}:\
+    ${file.reference.lucene-spatial-4.10.3.jar}:\
+    ${file.reference.lucene-suggest-4.10.3.jar}:\
+    ${file.reference.spatial4j-0.4.1.jar}:\
+    ${file.reference.sigar-1.6.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -93,7 +138,20 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
+jnlp.codebase.type=no.codebase
+jnlp.descriptor=application
+jnlp.enabled=false
+jnlp.mixed.code=default
+jnlp.offline-allowed=false
+jnlp.signed=false
+jnlp.signing=
+jnlp.signing.alias=
+jnlp.signing.keystore=
 main.class=Crawler.CrawlerStarter
+# Optional override of default Codebase manifest attribute, use to prevent RIAs from being repurposed
+manifest.custom.codebase=
+# Optional override of default Permissions manifest attribute (supported values: sandbox, all-permissions)
+manifest.custom.permissions=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
